--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ input:focus, input:active{
     height: 100%;
     background-color: #4263EB;
     color: white;
-    border-radius: 11px;
+    border-radius: 5px;
     border-width: 2px;
 }
 #button__submit:hover{
